--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,9 @@ header {
     flex-direction: column;
 }
 
+/***********************************************************/
 /* BANNER ANIMADO */
+/***********************************************************/
 .banner {
     position: relative;
     height: 100%;
@@ -264,7 +266,7 @@ header {
 }
 
 /* BARRA DE NAVEGACIÓN */
-.nav-bar {
+/* .nav-bar {
     position: sticky;
     top: 0;
     background-color: #fdf1d7;
@@ -286,9 +288,11 @@ header {
     text-decoration: none;
     padding: 10px;
     color: black;
-}
+} */
 
+/***********************************************************/
 /* BARRA DE NAV-BOOTSTRAP */
+/***********************************************************/
 .navbar {
     position: sticky;
     top: 0;
@@ -310,7 +314,9 @@ header {
     font-weight: bold;
 }
 
+/***********************************************************/
 /* HOME */
+/***********************************************************/
 h1,
 h2 {
     text-align: center;
@@ -482,7 +488,34 @@ main {
     grid-area: mot5;
 }
 
+footer{
+    display: block;
+    height: auto;
+    width: 100%;
+    text-align: center;
+    background-color: #fdf1d7;
+    padding-bottom: 10px;
+}
+
+footer h6 {
+    font-size: 15px;
+    font-family: var(--font-p);
+}
+
+footer a {
+    color: black;
+    font-size: 40px;
+    letter-spacing: 30px;
+}
+
+.foot{
+    padding-top: 10px;
+}
+
+/***********************************************************/
 /* RESPONSIVE: TABLET 768 */
+/***********************************************************/
+
 /* GALERIA */
 @media only screen and (max-width: 768px) {
 
@@ -522,7 +555,10 @@ main {
 
 }
 
+/***********************************************************/
 /* RESPONSIVE: TABLET 600 */
+/***********************************************************/
+
 /* GALERIA */
 @media only screen and (max-width: 600px) {
 
@@ -578,7 +614,10 @@ main {
 
 }
 
+/***********************************************************/
 /* RESPONSIVE: MOBILE 480 */
+/***********************************************************/
+
 /* GALERIA */
 @media only screen and (max-width: 480px) {
 
