--- a/css/style.css
+++ b/css/style.css
@@ -492,6 +492,190 @@ main {
 }
 
 /***********************************************************/
+/* EXCURSIONES */
+/***********************************************************/
+.myCard{
+    position: relative;
+    height: 300px;
+    display: flex;
+    transform-style: preserve-3d;
+    transform: perspective(1000px);
+    /* transition: 1s; */
+}
+
+.frente, .dorso{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    transition: transform .7s linear;
+    border-radius: 5px;
+}
+
+.frente img{
+    height: 100%;
+}
+
+.frente{
+    transform: perspective(2500px) rotateY(0deg);
+}
+
+.dorso{
+    background: rgb(236, 235, 235);
+    transform: perspective(2500px) rotateY(180deg);
+}
+
+.myCard:hover > .frente{
+    transform: perspective(2500px) rotateY(-180deg);
+}
+
+.myCard:hover > .dorso{
+    transform: perspective(2500px) rotateY(0deg);
+}
+
+.tours h3 {
+    font-family: var(--font-p);
+    font-size: 20px;
+    padding-top: 10px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.tours p {
+    font-family: var(--font-p);
+    text-align: justify;
+    font-size: 15px;
+    padding: 5px;
+}
+
+/* .myCard:hover{
+    transform: translateX(50%);
+} */
+
+/* .myCard .detalles{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.myCard .detalles .contenido{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    transform-origin:center;
+    transform-style: preserve-3d;
+    transition: 1s;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+}
+
+.myCard .detalles .contenido h3{
+    text-align: center;
+}
+
+.myCard .imgBox{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: black;
+    transform-origin:center;
+    transform-style: preserve-3d;
+    transition: 1s;
+}
+
+.myCard:hover .imgBox{
+    transform: rotateY(-180deg);
+    background: white;
+    z-index: 0;
+}
+
+.myCard:hover .contenido{
+    transform: rotateY(0deg);
+}
+
+.myCard .imgBox img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
+} */
+
+/* *************************************************************** */
+
+/* .middle{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+  .mycard{
+    cursor: pointer;
+    width: 340px;
+    height: 480px;
+  }
+  .front,.back{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    transition: transform .6s linear;
+  }
+  .front img{
+    height: 100%;
+  }
+  .front{
+    transform: perspective(600px) rotateY(0deg);
+  }
+  .back{
+    background: #f1f1f1;
+    transform: perspective(600px) rotateY(180deg);
+  }
+  .back-content{
+    color: #2c3e50;
+    text-align: center;
+    width: 100%;
+  }
+  .sm{
+    margin: 20px 0;
+  }
+  .sm a{
+    display: inline-flex;
+    width: 40px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    color: #2c3e50;
+    font-size: 18px;
+    transition: 0.4s;
+    border-radius: 50%
+  }
+  .sm a:hover{
+    background: #2c3e50;
+    color: white;
+  }
+  .mycard:hover > .front{
+    transform: perspective(600px) rotateY(-180deg);
+  }
+  .mycard:hover > .back{
+    transform: perspective(600px) rotateY(0deg);
+  } */
+
+/***********************************************************/
 /* NOSOTROS */
 /***********************************************************/
 .nos-sobremi h2{
