--- a/css/style.css
+++ b/css/style.css
@@ -267,15 +267,13 @@ header {
 /* BARRA DE NAV-BOOTSTRAP */
 /***********************************************************/
 .navbar {
-    /* position: sticky; */
-    /* top: 0; */
     background-color: #fdf1d7;
-    /* z-index: 2; */
 }
 
 .nav-item{
     list-style: none;
     font-family: var(--font-p);
+    padding-top: 7px;
 }
 
 .nav-link{
@@ -285,6 +283,34 @@ header {
 
 .active{
     font-weight: bold;
+}
+
+/* MENU CENTRADO */
+.navbar-toggler{
+    margin: 0 auto;
+    border: none;
+}
+
+/* MENU CENTRADO (desplegado) */
+.navbar .navbar-collapse {
+    text-align: center;
+}
+
+/* REEMPLAZA ICONO DEL MENU */
+.navbar-toggler-icon {
+    background-image: url(../img/logo-small.png)!important;
+    background-size: cover;
+    height: 50px;
+    width: 50px;
+    position: relative;
+    transition: all 0.50s ease-out;
+    transform-origin: center;
+}
+
+.navbar-toggler:not(.collapsed) 
+.navbar-toggler-icon 
+{
+    transform: rotateY(180deg);
 }
 
 /***********************************************************/
