--- a/css/style.css
+++ b/css/style.css
@@ -338,12 +338,12 @@ main {
     display: grid;
     margin: auto;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 250px 250px 250px 250px;
+    grid-template-rows:repeat(4, 200px);
     grid-template-areas:
-        "img1 img1 img2 img2"
-        "img3 img3 img4 img4"
-        "img5 img5 img6 img6"
-        "img7 img7 img8 img8";
+        "img1 img1 img2 img3"
+        "img7 img5 img5 img3"
+        "img7 img4 img4 img8"
+        "img6 img6 img6 img8";
     gap: 10px;
     padding: 30px;
     text-transform: capitalize;
@@ -676,7 +676,7 @@ footer a {
 }
 
 .redes{
-    padding-inline-start: 30px;
+    padding-inline-start: 29px;
 }
 
 /***********************************************************/
