--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -14,10 +14,7 @@
         border-radius: 12px;
 
         h3{
-            font-family: $font-p;
-            font-size: 20px;
-            padding-top: 10px;
-            font-weight: bold;
+            @include h3-default;
         }
 
         input::placeholder{
