--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -113,9 +113,7 @@
         }
 
         p{
-            text-align: justify;
-            font-size: 1em;
-            padding-bottom: 10px;
+            @include style-p( justify , 1em, 10px );
         }
 
     }
