--- a/scss/pages/_transporte.scss
+++ b/scss/pages/_transporte.scss
@@ -13,10 +13,7 @@
     }
 
     h3{
-        font-family: $font-p;
-        font-size: 20px;
-        padding-top: 10px;
-        font-weight: bold;
+        @include h3-default;
         text-align: left;
     }
     
