mejores pre-entrega final

--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,10 @@ body {
 /* BARRA DE NAV-BOOTSTRAP */
 /***********************************************************/
 .navbar {
-  background-color: #fdf1d7; }
+  background-color: #fdf1d7;
+  /* MENU CENTRADO (desplegado) */ }
+  .navbar .navbar-collapse {
+    text-align: center; }
 
 .nav-item {
   list-style: none;
@@ -216,21 +219,67 @@ body {
 .navbar-toggler {
   margin: 0 auto;
   border: none;
-  box-shadow: 3px 3px 15px #ecc075; }
+  -webkit-animation: jello-horizontal 1s both;
+  animation: jello-horizontal 1s both; }
 
-/* MENU CENTRADO (desplegado) */
-.navbar .navbar-collapse {
-  text-align: center; }
+@-webkit-keyframes jello-horizontal {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); }
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1); }
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1); }
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1); }
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1); }
+  75% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1); }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); } }
+
+@keyframes jello-horizontal {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); }
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1); }
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1); }
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1); }
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1); }
+  75% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1); }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); } }
 
 /* REEMPLAZA ICONO DEL MENU */
 .navbar-toggler-icon {
-  background-image: url(../img/logo-small.png) !important;
+  background-color: #b88c40;
+  background-image: url(../img/logo-menu.png) !important;
   background-size: cover;
   height: 50px;
   width: 50px;
   position: relative;
   transition: all 0.50s ease-out;
-  transform-origin: center; }
+  transform-origin: center;
+  border-radius: 50%;
+  box-shadow: #b88c40 0px 3px 5px 3px; }
 
 .navbar-toggler:not(.collapsed) .navbar-toggler-icon {
   transform: rotateY(180deg); }
